test/cases/syntax_error_orderly.out
'foo.bar' has an invalid format: Error: Parse error on line 1:
string ["foo", "bar"
--------------------^
Expecting ']', ',', got 'EOF'
