test/cases/syntax_error_orderly.js
exports.conf = {
  foo: {
    bar: 'string ["foo", "bar"' // note, the enum values are unclosed
  }
};
